提交修改的MAVEN 配置文件